syntax = "proto3";
package housingApp;

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc ListAllUsers (ListAllUsersRequest) returns (ListAllUsersResponse);
}

message User {
    string FirstName = 1;
    string LastName = 2;
    int32 Age = 3;
    string ID = 4;
}

message CreateUserRequest {
    string FirstName = 1;
    string LastName = 2;
    int32 Age = 3;
}

message CreateUserResponse {
    User User = 1;
}

message ListAllUsersRequest {
}

message ListAllUsersResponse {
    repeated User List = 1;
}